syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "Models";

package com.example.mutualfund.grpc;

message Empty {}

message MutualFundMetaGrpc {
  string fundHouse = 1;
  string schemeType = 2;
  string schemeCategory = 3;
  int64 schemeCode = 4;
  string schemeName = 5;
}

message NavPerDateGrpc {
  int64 schemeCode = 1;
  string date = 2;
  double nav = 3;
}

message MutualFundGrpc {
  MutualFundMetaGrpc meta = 1;
  repeated NavPerDateGrpc navPerDates = 2;
}

message NavStatisticsGrpc {
  int64 days = 1;
  string date = 2;
  double nav = 3;

  enum TenorEnumGrpc {
      ONED = 0;
      THREED = 1;
      ONEW = 2;
      TWOW = 3;
      ONEM = 4;
      TWOM = 5;
      SIXM = 6;
      ONEY = 7;
      TWOY = 8;
      FIVEY = 9;
      INCEPTIO = 10;
  }
  TenorEnumGrpc tenor = 4;

  enum MoveGrpc {
      UP = 0;
      DOWN = 1;
      NO_CHANGE = 2;
  }
  MoveGrpc move =5;
}

message MutualFundStatisticsGrpc {
  MutualFundMetaGrpc meta = 1;
  repeated NavStatisticsGrpc statistics = 2;
  double percentageIncrease = 3;
}

message MutualFundSearchResultGrpc {
  int64 schemeCode = 1;
  string schemeName = 2;
  double searchScore = 3;
}

message SchemeCodeGrpcRequest {
  int64 schemeCode = 1;
}

message SearchGrpcRequest {
  string searchString = 1;
}