syntax = "proto3";

option java_outer_classname = "MutualFunds";

package com.example.mutualfund.grpc;

message Meta {
  string fundHouse = 1;
  string schemeType = 2;
  string schemeCategory = 3;
  int64 schemeCode = 4;
  string schemeName = 5;
}

message NavPerDate {
  int64 schemeCode = 1;
  string date = 2;
  double nav = 3;
}

message MutualFund {
  Meta meta = 1;
  repeated NavPerDate navPerDates = 2;
}