syntax = "proto3";

import "models.proto";

option java_outer_classname = "Services";

package com.example.mutualfund.grpc;

service MutualFundService {
  rpc getAllMutualFunds(Empty) returns (MutualFundMetaList) {}
  rpc getMutualFund(SchemeCodeRequest) returns (MutualFund) {}
  rpc getMutualFundStatistics(SchemeCodeRequest) returns (MutualFundStatistics) {}
}

service MutualFundSearchService {
  rpc searchForMutualFund(SearchRequest) returns (MutualFundSearchResults) {}
}